--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <!DOCTYPE html>
-<a href="ADDON_ID_HERE-VERSION_NUMBER_HERE.zip">ADDON_ID_HERE-VERSION_NUMBER_HERE.zip</a>
+<a href="ADDON_ID_HERE-VERSION_NUMBER_HERE.zip">ADDON_ID_HERE-VERSION_NUMBER_HERE.zip</a><br />
+<a href="https://raw.githubusercontent.com/5h4d0wz4xx/5h4d0wz4xx.github.io/master/repo/builds/builds.txt?token=GHSAT0AAAAAACRSGVHKZ6SUZLXPUEKN2P34ZRP3SYA">builds.txt</a>
