--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 Kodi Omega: Custom build Wizard <br />
 <br />
-<a href="repo.5h4d0wz4xx.omegawizard-1.0.zip">repo.5h4d0wz4xx.omegawizard-1.0.zip</a><br />
+<a href="plugin.program.omegawizard-1.0.zip">plugin.program.omegawizard-1.0.zip</a><br />
 <br />
